# iora

./: .gitignore  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  NOTICE  README.md  clang-format.sh  cmake_install.cmake  test_dns_compression  test_dns_compression.cpp
.github/: copilot-instructions.md
cmake/: AbiInvariant.cmake  CompilerFlags.cmake  Dependencies.cmake  IoraConfig.cmake.in  IoraEmbedAssets.cmake  IoraEmbedAssetsGen.cmake  IoraTargets.cmake
include/iora/: iora.hpp
include/iora/common/: i_lifecycle_managed.hpp
include/iora/core/: blocking_queue.hpp  (+19 more)
sample/: CMakeLists.txt  CTestTestfile.cmake  Makefile  RUNNING.md  cmake_install.cmake  config_with_plugin.toml  microservice_example.cpp
sample/plugins/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  microservice_plugin.cpp
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  iora.cpp
src/config/: iora.cfg.in
src/core/: CMakeLists.txt  iora_core.cpp
src/modules/connectors/jsonrpc_client/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  jsonrpc_client.hpp  mod_jsonrpc_client.cpp
src/modules/connectors/jsonrpc_client/tests/: CMakeLists.txt  iora_test_mod_jsonrpc_client_functional.cpp  iora_test_mod_jsonrpc_client_server_real.cpp
src/modules/endpoints/jsonrpc_server/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  jsonrpc_server.hpp  mod_jsonrpc_server.cpp
src/modules/endpoints/jsonrpc_server/tests/: CMakeLists.txt  iora_test_mod_jsonrpc_server.cpp
src/modules/storage/kvstore/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  kvstore.hpp  mod_kvstore.cpp
src/modules/storage/kvstore/tests/: CMakeLists.txt  iora_test_mod_kvstore.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MinimalDnsServer.hpp  MockDnsServer.hpp  all_tests.cpp  cmake_install.cmake  debug_chained_test.cpp  iora_test_batch_integration.cpp  iora_test_batch_processor.cpp  iora_test_config_loader.cpp  iora_test_dns_client_minimal.cpp  iora_test_event_queue.cpp  iora_test_expiring_cache.cpp  iora_test_http.cpp  iora_test_iora_service.cpp  iora_test_logger.cpp  iora_test_main.cpp  iora_test_net_utils.hpp  iora_test_plugin.cpp  iora_test_plugin_dependencies.cpp  iora_test_shared_tcp.cpp  iora_test_shared_transport_timers.cpp  iora_test_shared_udp.cpp  iora_test_state.cpp  iora_test_threadpool.cpp  iora_test_transport_improvements.cpp  iora_test_unified_tcp_udp.cpp  simple_chained_test.cpp  test_helpers.hpp
tests/core/: iora_test_blocking_queue.cpp  iora_test_buffer_view.cpp  iora_test_concurrent_hash_map.cpp  iora_test_config_loader.cpp  iora_test_config_loader_get_table.cpp  iora_test_config_loader_get_table_array.cpp  iora_test_event_queue.cpp  iora_test_external_logger.cpp  iora_test_logger.cpp  iora_test_logger_external_handler_race.cpp  iora_test_metrics.cpp  iora_test_rate_limiter.cpp  iora_test_result.cpp  iora_test_ring_buffer.cpp  iora_test_signal.cpp  iora_test_state_machine.cpp  iora_test_string_utils.cpp  iora_test_threadpool.cpp  iora_test_threadpool_cleanup.cpp  iora_test_threadpool_lifecycle.cpp  iora_test_timer.cpp  iora_test_timer_lifecycle.cpp  iora_test_timing_wheel.cpp
tests/network/: iora_test_batch_integration.cpp  iora_test_batch_processor.cpp  iora_test_dns_async.cpp  iora_test_dns_basic.cpp  iora_test_dns_client.cpp  iora_test_dns_client_comprehensive.cpp  iora_test_dns_client_minimal.cpp  iora_test_dns_comprehensive.cpp  iora_test_dns_timer_cancellation.cpp  iora_test_engine_introspection.cpp  iora_test_http.cpp  iora_test_http_client_lease.cpp  iora_test_http_client_pool.cpp  iora_test_http_client_response_framing.cpp  iora_test_http_client_retry.cpp  iora_test_hybrid_transport.cpp  iora_test_shared_tcp.cpp  iora_test_shared_transport_timers.cpp  iora_test_shared_udp.cpp  iora_test_sync_async_transport.cpp  iora_test_tcp_engine.cpp  iora_test_tcp_engine_teardown_race.cpp  iora_test_tcp_engine_timers.cpp  iora_test_tcp_rapid_send.cpp  iora_test_transport.cpp  iora_test_transport_improvements.cpp  iora_test_udp_engine.cpp  iora_test_udp_engine_teardown_race.cpp  iora_test_unified_tcp_udp.cpp  iora_test_webhook_transport.cpp  iora_test_websocket.cpp  iora_test_websocket_frame.cpp  transport_teardown_harness.cpp  transport_test_seam.hpp
tests/parsers/: iora_test_http_header_combining.cpp  iora_test_json_parser.cpp  iora_test_minimal_toml_serializer_array_of_tables.cpp  iora_test_xml_parser.cpp
tests/plugins/: BasePlugin.cpp  CMakeLists.txt  ChainedPlugin.cpp  CyclePluginA.cpp  CyclePluginB.cpp  CyclePluginC.cpp  DependentPlugin.cpp  IndirectCycleA.cpp  IndirectCycleB.cpp  IndirectCycleC.cpp  SingletonProbePlugin.cpp  TestPlugin.cpp
tests/service/: iora_test_features_config.cpp  iora_test_iora_service.cpp  iora_test_plugin.cpp  iora_test_plugin_isolation.cpp
tests/storage/: iora_test_kvstore.cpp  iora_test_state.cpp
tests/tls-certs/: test_tls_cert.pem  test_tls_key.pem
tests/util/: iora_test_expiring_cache.cpp  iora_test_shell_runner.cpp  iora_test_ttl_map.cpp
tests/web/: registry_cross_so_iface.hpp  service_registry_test_access.hpp  test_application_integration.cpp  test_assets.cpp  test_base64_decode.cpp  test_channels.cpp  test_channels_concurrency.cpp  test_html_escape.cpp  test_htmx_helpers.cpp  test_http_auth.cpp  test_mustache.cpp  test_routing_extensions.cpp  test_service_registry.cpp  test_service_registry_concurrency.cpp  test_service_registry_crossso.cpp  test_sse_integration.cpp  test_sse_stream.cpp  test_websocket_reconnect.cpp
tests/web/cmake/: run_embed_assets_test.cmake
tests/web/cmake/test_embed_assets/: CMakeLists.txt  consumer.cpp
tests/web/cmake/test_embed_assets/static/: app.js
tests/web/cmake/test_embed_assets/templates/: index.html
tests/web/conformance/: AbiSelfCheck.hpp  IAuthGuardConformance.hpp  ICsrfProtectorConformance.hpp  ILoginUiProviderConformance.hpp  ISessionStoreConformance.hpp
tests/web_plugins/: CMakeLists.txt  RegistryTestPlugin.cpp
(+61 files in other folders)
